[project]
name = "munchkin-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.19",
    "aiohttp>=3.11.0,<3.11.14",
    "alembic>=1.15.2",
    "alembic-postgresql-enum>=1.7.0",
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "pydantic<2.11",
    "pylint>=3.3.6",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "sqlalchemy[asyncio]>=2.0.40",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "yapf>=0.43.0",
]
