[project]
name = "munchkin-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.19",
    "aiohttp>=3.11.0,<3.11.14",
    "alembic>=1.15.2",
    "alembic-postgresql-enum>=1.7.0",
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "pydantic<2.11",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "sqlalchemy[asyncio]>=2.0.40",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "black>=25.1.0",
    "codespell>=2.4.1",
    "coverage>=7.8.0",
    "detect-secrets>=1.5.0",
    "mypy>=1.15.0",
    "pycycle>=0.0.8",
    "pydocstyle>=6.3.0",
    "pylint>=3.3.6",
    "radon>=6.0.1",
    "types-requests>=2.32.0.20250328",
    "yapf>=0.43.0",
]

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["src.backend.migrations"]


[[tool.mypy.overrides]]
module = [
    "src.backend",
    "src.tg_bot",
]
